feat: manejo de consulta vacía + swagger actualizado
