# controllers/subgrupo.go
@@ -85,7 +85,7 @@ func (c *SubgrupoController) GetOne() {
 // @Param	order	query	string	false	"Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ..."
 // @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
 // @Param	offset	query	string	false	"Start position of result set. Must be an integer"
-// @Success 200 {object} models.Subgrupo
+// @Success 200 {object} []models.Subgrupo
 // @Failure 404 not found resource
 // @router / [get]
 func (c *SubgrupoController) GetAll() {
